# time-value

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  bacon.toml  deny.toml  flake.nix  release-plz.toml  rust-toolchain.toml
.github/workflows/: ci.yml  publish.yml  release-plz.yml
.helix/: languages.toml
.zellij/: layout.kdl
crates/time-value-cli/: Cargo.toml  README.md
crates/time-value-cli/src/: main.rs  results.rs
crates/time-value-cli/tests/: cli.rs
crates/time-value-daycount/: Cargo.toml  README.md
crates/time-value-daycount/src/: lib.rs
crates/time-value-mcp/: Cargo.toml  README.md
crates/time-value-mcp/src/: main.rs  params.rs  results.rs  server.rs
crates/time-value-mcp/tests/: mcp.rs  output_schema.rs
crates/time_value/: CHANGELOG.md  Cargo.toml  README.md
crates/time_value-cli/: Cargo.toml  README.md
crates/time_value-cli/src/: main.rs
crates/time_value-mcp/: Cargo.toml  README.md
crates/time_value-mcp/src/: main.rs  params.rs  server.rs
crates/time_value/src/: amortization.rs  annuity.rs  cashflows.rs  continuous.rs  currency.rs  dated.rs  lib.rs  math.rs  money.rs  period.rs  periodicity.rs  rate.rs  root.rs  schemars_impls.rs  serde_impls.rs  single_sum.rs  wire.rs
crates/time_value/tests/: properties.proptest-regressions  properties.rs  schemars.rs  serde.rs  thread_safety.rs
docs/adr/: 0000-adr-template.md  0001-record-architecture-decisions.md  0002-workspace-layout.md  0003-synchronous-computation-model.md  0004-error-handling.md  0005-domain-modelling-and-strong-typing.md  0006-license.md  0007-rust-edition-and-msrv.md  0008-nix-flake-dev-environment.md  0009-no_std-and-optional-libm.md  0010-cli-surface.md  0011-mcp-server.md  0012-ci-and-release-automation.md  0013-core-api-values-and-discrete-operations.md  0014-transcendental-single-sum-operations.md  0015-annuities.md  0016-msrv-and-toolchain-bump.md  0017-per-crate-msrv-core-1.85.md  0018-kebab-case-binary-crate-names.md  0019-1.0-public-api-decisions.md  0020-robust-irr-newton-with-bisection-fallback.md  0021-fallible-operations-on-non-finite-results.md  0022-core-first-sequencing-before-the-first-release.md  0023-money-arithmetic-surface.md  0024-rate-conversions-effective-and-nominal.md  0025-solve-for-periods-and-rate.md  0026-modified-internal-rate-of-return.md  0027-amortization-schedule.md  0028-binary-surface-conventions.md  0029-dated-cashflows-xnpv-xirr.md  0030-shared-day-count-support-crate.md  0031-split-non-finite-result-into-overflow-and-undefined.md  0032-ergonomic-convenience-impls.md  0033-core-domain-model-two-axes-and-an-f64-engine.md  0034-money-and-currency.md  0035-periodicity-tagged-time.md  0036-continuous-compounding-force-of-interest.md  0037-currency-in-the-binaries.md  0038-no-scheduled-release-continuous-development.md  0039-typed-output-layer-for-the-binaries.md  (+9 more)
