[package]
name = "time-value-daycount"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal ACT/365 day-count for the time-value binaries: ISO date parsing and year-fractions."
readme = "README.md"
# Internal support crate, shared by the CLI and MCP binaries; never published
# (ADR-0030). The core `time_value` crate takes year-offsets, not dates (ADR-0029).
publish = false

[lints]
workspace = true

[dependencies]
# Deliberately none: the day-count is self-contained arithmetic, so no calendar
# dependency reaches the binaries (ADR-0029, ADR-0030).
