[package]
name = "time-value-mcp"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol server exposing time_value's time-value-of-money calculations as tools."
readme = "README.md"
keywords = ["finance", "tvm", "mcp", "npv", "irr"]
categories = ["finance"]
# Not published yet — see time-value-cli (ADR-0012).
publish = false

[lints]
workspace = true

[[bin]]
name = "time-value-mcp"
path = "src/main.rs"

[dependencies]
# `std` gives the transcendental math the single-sum / annuity operations need.
time_value = { workspace = true, features = ["std"] }
anyhow.workspace = true
serde_json.workspace = true
# The MCP transport and its async runtime (ADR-0011). The core library stays
# synchronous (ADR-0003); async is contained to this crate.
rmcp.workspace = true
tokio.workspace = true
schemars.workspace = true
serde.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
