[package]
name = "time-value-mcp"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol server exposing time_value's time-value-of-money calculations as tools."
readme = "README.md"
keywords = ["finance", "tvm", "mcp", "npv", "irr"]
categories = ["finance"]
# Not published yet — see time-value-cli (ADR-0012).
publish = false

[lints]
workspace = true

[[bin]]
name = "time-value-mcp"
path = "src/main.rs"

[dependencies]
# `std` gives the transcendental math the single-sum / annuity operations need.
# `serde` + `schemars` let the tool inputs use the core `Currency` directly —
# deserialized (via `from_code`) and schema'd (the ISO-code enum) by the core
# (ADR-0044) — replacing this crate's former `CurrencyCode` newtype.
time_value = { workspace = true, features = ["std", "serde", "schemars"] }
# ACT/365 day-count for the dated-cashflow tools (XNPV/XIRR), shared with the CLI
# binary (ADR-0030).
time-value-daycount.workspace = true
anyhow.workspace = true
serde_json.workspace = true
# The MCP transport and its async runtime (ADR-0011). The core library stays
# synchronous (ADR-0003); async is contained to this crate.
rmcp.workspace = true
tokio.workspace = true
# Re-add schemars' own `std` (the workspace dep drops it so the core can use
# schemars `no_std`); the binary is `std` and rmcp expects the std impls.
schemars = { workspace = true, features = ["std"] }
serde.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
