[package]
name = "time_value-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for time_value: type-safe time-value-of-money calculations."
readme = "README.md"
keywords = ["finance", "tvm", "cli", "npv", "irr"]
categories = ["command-line-utilities", "finance"]
# Not published yet — the core `time_value` crate ships first; the binaries opt
# in to crates.io when their surfaces stabilise (ADR-0012).
publish = false

[lints]
workspace = true

# The crate is `time_value-cli` (the crate name `time_value` is the library);
# the installed binary is `time-value` (ADR-0010).
[[bin]]
name = "time-value"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
