[package]
name = "time_value-mcp"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol server exposing time_value's time-value-of-money calculations as tools."
readme = "README.md"
keywords = ["finance", "tvm", "mcp", "npv", "irr"]
categories = ["finance"]
# Not published yet — see time_value-cli (ADR-0012).
publish = false

[lints]
workspace = true

[[bin]]
name = "time-value-mcp"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
