[package]
name = "time_value"
version = "1.0.0"
edition.workspace = true
# The core library keeps a conservative MSRV, below the workspace's 1.88
# toolchain (which the MCP binary's deps force). CI verifies it on a real 1.85
# toolchain — see docs/adr/0017-per-crate-msrv-core-1.85.md.
rust-version = "1.85"
license.workspace = true
repository.workspace = true
description = "Type-safe time-value-of-money calculations in Rust"
homepage = "https://crates.io/crates/time_value"
documentation = "https://docs.rs/time_value"
readme = "README.md"
keywords = ["finance", "tvm", "npv", "irr", "annuity"]
categories = ["finance", "mathematics", "no-std"]

[lints]
workspace = true

[features]
# The default core is `no_std` and dependency-free (ADR-0009).
default = []
# Pull in `std` (transcendental math, `std::error::Error` blanket impls where
# cheaper than the `core` equivalents).
std = []
# `no_std` transcendental math (`powf`) via `libm`, so the single-sum and annuity
# operations work without `std` (ADR-0009). The default build (NPV/NFV/IRR) is
# arithmetic-only and needs neither `std` nor `libm`.
libm = ["dep:libm"]

[dependencies]
libm = { workspace = true, optional = true }

[dev-dependencies]
# Property-based tests (tests/properties.rs). Dev-only, so it never enters the
# published crate's dependency tree — the zero-dependency promise is about what
# a downstream user pulls in (ADR-0009), not the test harness.
proptest = { workspace = true }
