[package]
name = "time_value"
version = "1.0.0"
edition.workspace = true
# The core library keeps a conservative MSRV, below the workspace's 1.88
# toolchain (which the MCP binary's deps force). CI verifies it on a real 1.85
# toolchain — see docs/adr/0017-per-crate-msrv-core-1.85.md.
rust-version = "1.85"
license.workspace = true
repository.workspace = true
description = "Type-safe time-value-of-money calculations in Rust"
homepage = "https://crates.io/crates/time_value"
documentation = "https://docs.rs/time_value"
readme = "README.md"
keywords = ["finance", "tvm", "npv", "irr", "annuity"]
categories = ["finance", "mathematics", "no-std"]

[package.metadata.docs.rs]
# docs.rs builds with default features only, but the single-sum, annuity, and
# rate-conversion APIs — and the intra-doc links pointing at them — live behind
# `std`/`libm` (ADR-0009). Build the docs with all features so the full surface
# is documented and those links resolve.
all-features = true

[lints]
workspace = true

[features]
# The default core is `no_std` and dependency-free (ADR-0009).
default = []
# Pull in `std` (transcendental math, `std::error::Error` blanket impls where
# cheaper than the `core` equivalents). Implies `alloc` — `std` is a superset.
std = ["alloc"]
# The `alloc` crate (no `std`), for the owned `OwnedCashflows` series that
# complements the borrowed, allocation-free `Cashflows` (ADR-0043). Off by
# default so the core stays allocation-free; enabling it (or `std`) adds the
# owned collection without pulling in `std`.
alloc = []
# `no_std` transcendental math (`powf`) via `libm`, so the single-sum and annuity
# operations work without `std` (ADR-0009). The default build (NPV/NFV/IRR) is
# arithmetic-only and needs neither `std` nor `libm`.
libm = ["dep:libm"]
# `Serialize`/`Deserialize` for the public value types, off by default so the
# core stays dependency-free (ADR-0042). The dep is `no_std`-compatible
# (`default-features = false`), so `serde` composes with the default `no_std`
# build; deserialization routes through the fallible constructors, so an
# out-of-domain value is rejected, not silently accepted.
serde = ["dep:serde"]
# `JsonSchema` for the public value types — the JSON-Schema companion to `serde`
# (ADR-0044), off by default. Implies `alloc` (schemars builds its schemas with
# `alloc`); the schema shapes track the `serde` wire format (ADR-0042). Composes
# with a `no_std` build — the workspace dep drops schemars' own `std`.
schemars = ["dep:schemars", "alloc"]

[dependencies]
libm = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
# Property-based tests (tests/properties.rs). Dev-only, so it never enters the
# published crate's dependency tree — the zero-dependency promise is about what
# a downstream user pulls in (ADR-0009), not the test harness.
proptest = { workspace = true }
# Exercises the `serde` feature's wire format (tests/serde.rs, gated on the
# feature). Dev-only — `serde_json` is `std`, but the round-trip tests run under
# `std` anyway; the shipped `serde` support itself stays `no_std`.
serde_json = { workspace = true }
